--- a/air_quality_jonas.Rmd
+++ b/air_quality_jonas.Rmd
@@ -8,8 +8,14 @@ output: html_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
-
+library("dplyr")
 ```
+
+
+
+*EDA Observations*:
+
+
 
 
 
@@ -21,8 +27,25 @@ df_airquality2019<- read.csv("./data/annual_aqi_by_county_2019.csv")
 df_airquality2018<- read.csv("./data/annual_aqi_by_county_2018.csv")
 df_airquality2017<- read.csv("./data/annual_aqi_by_county_2017.csv")
 df_airquality2016<- read.csv("./data/annual_aqi_by_county_2016.csv")
-df_airquality2020
+df_airquality2015<- read.csv("./data/annual_aqi_by_county_2015.csv")
+df_airquality2014<- read.csv("./data/annual_aqi_by_county_2014.csv")
+df_airquality2013<- read.csv("./data/annual_aqi_by_county_2013.csv")
+df_airquality2012<- read.csv("./data/annual_aqi_by_county_2012.csv")
+df_airquality2011<- read.csv("./data/annual_aqi_by_county_2011.csv")
+df_airquality2010<- read.csv("./data/annual_aqi_by_county_2010.csv")
+df_airquality2009<- read.csv("./data/annual_aqi_by_county_2009.csv")
 
+#Combine data from 2019 to 2016 into df_aqi_20_16
+df_aqi_19_18 <- rbind(df_airquality2019, df_airquality2018)
+df_aqi_19_17 <- rbind(df_aqi_19_18, df_airquality2017)
+df_aqi_19_16 <- rbind(df_aqi_19_17, df_airquality2016)
+df_aqi_19_15 <- rbind(df_aqi_19_16, df_airquality2015)
+df_aqi_19_14 <- rbind(df_aqi_19_15, df_airquality2014)
+df_aqi_19_13 <- rbind(df_aqi_19_14, df_airquality2013)
+df_aqi_19_12 <- rbind(df_aqi_19_13, df_airquality2012)
+df_aqi_19_11 <- rbind(df_aqi_19_12, df_airquality2011)
+df_aqi_19_10 <- rbind(df_aqi_19_11, df_airquality2010)
+df_aqi_19_09 <- rbind(df_aqi_19_10, df_airquality2009)
 #Load NYTimes Data - using code from c06
 url_counties <- "https://raw.githubusercontent.com/nytimes/covid-19-data/master/live/us-counties.csv"
 filename_nyt <- "./data/nyt_counties.csv"
@@ -37,29 +60,57 @@ curl::curl_download(
 df_covid <- read_csv(filename_nyt)
 df_covid
 ```
+```{r}
+a <- df_aqi_19_09 %>%
+  filter(State == "Hawaii") 
+a
+b <- df_aqi_19_09 %>%
+  filter(County == "Seneca") 
+b
+```
+
+
+```{r}
+#Get the avg aqi for years 2009-2019
+
+df_avg_aqi <- df_aqi_19_09 %>%
+  group_by(County, State) %>%
+  summarise_at(vars("Median.AQI"),
+                list(Avg_aqi = mean))
+df_avg_aqi %>%
+  arrange(Avg_aqi)
+df_aqi_19_09 %>%
+    summarise_at(vars("Median.AQI"),
+                list(Avg_aqi = mean))
+
+```
+
+
+```{r}
+
+#Corelation in avg aqi and covid outcomes
+df_correlation <- df_covid_air_mean %>%
+  filter(deaths != '') %>%
+  summarise(corelation_cases = cor(Avg_aqi, cases),
+            corelation_deaths = cor(Avg_aqi, deaths))
+df_correlation
+```
+
 
 
 ```{r wrangling data}
 names(df_covid)[2] <- "County"
 names(df_covid)[3] <- "State"
 df_covid_air <- inner_join(df_covid, df_airquality2020, by = c("County", "State"))
+df_covid_air_mean <- inner_join(df_covid, df_avg_aqi, by = c("County", "State"))
 df_covid_air #This is the joined version of the COVID-19 and EPA data set
+df_covid_air_mean #This is the joined dataset of 10 year avg aqi and covid-19
 ```
 
 ```{r}
 df_pm25 <- read_csv("./data/pm25.csv")
 df_pm25
 ```
-  group_by(fips) %>% 
-  summarize(mean_pm25 = mean(pm25)) %>% 
-
-  mutate(fips = filter(
-                        nchar(fips) == 4
-                )
-           paste("0", fips, sep = "")
-  ) %>%
-  
-  arrange((fips))
 
 
 
@@ -130,9 +181,75 @@ df_covid_air %>%
   geom_point(aes(Air_Quality_Index, Deaths, color = State)) +
   geom_smooth(aes(Air_Quality_Index, Deaths), method = "lm") +
   scale_y_log10()
+df_covid_air %>%
+  summarise(
+    Air_Quality_Index = Median.AQI,
+    Deaths = deaths,
+    County = County,
+    State = State) %>%
+  ggplot() +
+  geom_point(aes(Air_Quality_Index, Deaths, color = State)) +
+  geom_smooth(aes(Air_Quality_Index, Deaths), method = "lm") +
+  scale_y_log10()
 ```
 
 
+```{r}
+theme_death_mean <- function() {
+  theme_minimal() %+replace%
+  theme(
+    axis.text.x = element_text(size = 10),
+    axis.text.y = element_text(size = 10),
+    axis.title.x = element_text(margin = margin(4, 4, 4, 4), size = 16),
+    axis.title.y = element_text(margin = margin(4, 4, 4, 4), size = 16, angle = 90),
+
+    legend.title = element_text(size = 16),
+    legend.text = element_text(size = 12),
+
+    strip.text.x = element_text(size = 12),
+    strip.text.y = element_text(size = 12),
+
+    panel.grid.major = element_line(color = "grey90"),
+    panel.grid.minor = element_line(color = "grey90"),
+
+    aspect.ratio = 1.2 / 2,
+
+    plot.margin = unit(c(t = +0.2, b = +0, r = +0.2, l = +0), "cm"),
+    plot.title = element_text(size = 12),
+    plot.title.position = "plot",
+    plot.subtitle = element_text(size = 16),
+    plot.caption = element_text(size = 12),
+    
+  )
+}
+df_covid_air_mean %>%
+  summarise(
+    Air_Quality_Index = Avg_aqi,
+    Deaths = deaths,
+    County = County,
+    State = State) %>%
+  ggplot() +
+  geom_point(aes(Air_Quality_Index, Deaths)) +
+  geom_smooth(aes(Air_Quality_Index, Deaths), method = "lm") +
+  theme_death_mean() +
+  scale_y_log10()+
+  labs(
+      x = "2009-2019 Mean Air Quality Index (AQI)",
+      y = "Deaths"
+    ) +
+  ggtitle("Correlation between deaths and 10 year mean aqi by county")
+df_covid_air_mean %>%
+  ggplot() +
+  geom_point(aes(Avg_aqi, cases)) +
+  geom_smooth(aes(Avg_aqi, cases), method = "lm") +
+  theme_death_mean() +
+  scale_y_log10()+
+  labs(
+      x = "2009-2019 Mean Air Quality Index (AQI)",
+      y = "Cases"
+    ) +
+  ggtitle("Correlation between cases and 10 year mean aqi by county")
+```
 
 
 
@@ -159,6 +276,7 @@ df_covid_air %>%
   ggplot() +
   geom_point(aes(Air_Quality_Index, Deaths, color = County)) +
   scale_y_log10()
+
 ```
 
 ```{r}
