--- a/COVID19Project.Rmd
+++ b/COVID19Project.Rmd
@@ -1,21 +1,22 @@
 ---
-title: "Air Quality Data - Shawn, Jonas, and Walter"
+title: "Air Quality Data - Shawn Albertson, Jonas Kazlauskas, and Walter Villa"
 # yaml-author
-date: 2020-06-05
+date: 2020-10-26
 output: github_document
 ---
-  
+
+
 *Purpose*: Is there a correlation between COVID-19 outcomes and air quality?
 
 *Background*:
 
-Air pollution is a mixture of solid and gas particles. Because air pollution may originate from different sources depending on location, our team decided to investigate if there was a connection between air pollution and COVID19.   
+Air pollution is a mixture of solid and gas particles present in the air in small but persistent quantities. Changes in air pollution depending on location are well documented, so we decided to investigate the relationship between air pollution and COVID-19. 
 
-Breathing in pollutants from the air is a large risk factor for lung related death. Studies have shown that long term exposure to polluted air can lead to irritation and damage throughout your respiratory pathway. Additionally, this damage is exacerbated in people with existing respiratory illnesses. Covid-19 is a novel coronavirus that emerged in late 2019 and has spread throughout the US and the world affecting millions. The virus and its effects are still being studied, but it has been shown to attack the lungs and cause problems with breathing. Due to the virus' impact on the respiratory system,  a study was conducted by Harvard researchers to analyze the connection between air pollution and Covid-19 mortality in the US. 
+Long term exposure to pollutants has been linked to negative health, being linked to irritation and damage throughout your respiratory pathway. Additionally, this damage is exacerbated in people with existing respiratory illnesses. COVID-19 is a novel coronavirus that emerged in late 2019 and has spread throughout the US and the world affecting millions. The virus and its effects are still being studied, but it has been shown to attack the lungs and cause problems with breathing. Due to the virus' impact on the respiratory system, a study was conducted by Harvard researchers to analyze the connection between air pollution and COVID-19 mortality in the US.
 
 https://www.hsph.harvard.edu/news/hsph-in-the-news/air-pollution-linked-with-higher-covid-19-death-rates/
 
-They found that higher Air Pollution, specifically the pollution category of PM2.5 (particulate diameter of ~2.5 micrometers), is linked with higher Covid-19 death rates. The study suggested that counties that have higher pollution will show "higher numbers of hospitalizations, higher numbers of deaths". We set out to explore this finding and to test if it holds using our data sources. 
+They found that higher air pollution, specifically the pollution category of PM2.5 (particulate diameter of ~2.5 micrometers), is linked with higher COVID-19 death rates. The study suggested that counties that have higher pollution will show "higher numbers of hospitalizations, higher numbers of deaths". We set out to explore this finding and to test if it holds using our data sources.
 
 https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4776742/
 
@@ -26,31 +27,33 @@ Notes on PM 2.5
 https://scopeblog.stanford.edu/2020/07/17/why-air-pollution-is-linked-to-severe-cases-of-covid-19/#:~:text=Studies%20are%20coming%20out%20that,areas%20of%20high%20pollution%20exposure.&text=This%20study%20and%20others%20have,the%20COVID%2D19%20death%20rate.
 
 *Data*:
-Covid-19 data: New York Times data of cumulative counts of Covid-19 cases and deaths by county in the US. This data is compiled from state and local government as well as health departments. 
+Covid-19 data: New York Times data of cumulative counts of Covid-19 cases and deaths by county in the US. This data is compiled from state and local government as well as health departments.
 https://github.com/nytimes/covid-19-data
 
-EPA data: Annual data taken from EPA's Air database that includes median air quality index values for each year by county. Air quality index (AQI) is a scale that takes into account many different forms of pollution to give an overall rating. Numbers on the low end (0-50) are considered "good" or healthy, whereas higher values (up to 500) are more dangerous for public health. 
+EPA data: Annual data taken from EPA's Air database that includes median air quality index values for each year by county. Air quality index (AQI) is a scale that takes into account many different forms of pollution to give an overall rating. Numbers on the low end (0-50) are considered "good" or healthy, whereas higher values (up to 500) are more dangerous for public health.
 Data: https://aqs.epa.gov/aqsweb/airdata/download_files.html
 AQI: https://www.airnow.gov/aqi/aqi-basics/
 
-PM 2.5 data: County-level PM2.5 exposure averaged from 2000-2016 taken from the Harvard study exploring PM2.5's link with Covid-19. Data is originally from The Atmospheric Composition Analysis Group at Dalhouse University. PM2.5 is particular pollution size of diameter of ~2.5 micrometers, which are considered fine and easily inhalable. These particles have been shown to be a serious health risk in individuals who are exposed in large amounts or over long periods of time.  
+PM 2.5 data: County-level PM2.5 exposure averaged from 2000-2016 taken from the Harvard study exploring PM2.5's link with Covid-19. Data is originally from The Atmospheric Composition Analysis Group at Dalhouse University. PM2.5 is specific pollution size of diameter of ~2.5 micrometers, which are considered fine and easily inhalable. These particles have been shown to be a serious health risk in individuals who are exposed in large amounts or over long periods of time.  
 Study: https://github.com/wxwx1993/PM_COVID
 Data: http://fizz.phys.dal.ca/~atmos/martin/
 PM2.5: https://www.epa.gov/pm-pollution/particulate-matter-pm-basics
 
 *EDA Observations*:
-# We should comment on the data quality here
-We began by exploring the EPA dataset, to get an idea of what patterns exist in the data. To more accurately represent the long term health effects of air quality we calculated the 10 year average of annual air quality. Taking a look at this data we found that an overall average AQI of 36.51012, hawaii had the largest 10 year mean AQI of 136.4, which is likely due to volcanic activity, and a minimum AQI of 0 in a number of counties such as Brunswick, North Carolina. While exploring this data we noticed that a large number of counties were not included. This raised questions about the data, however it is most likely that these counties simply did not have any places where air quality is regularly measured. 
+We began by exploring the EPA dataset, to get an idea of what patterns exist in the data. To more accurately represent the long term health effects of air quality we calculated the 10 year average of annual air quality. Taking a look at this data we found that an overall average AQI of 36.51012, hawaii had the largest 10 year mean AQI of 136.4, which is likely due to volcanic activity, and a minimum AQI of 0.00 in a number of counties such as Brunswick, North Carolina. While exploring this data we noticed that a large number of counties were not included. This raised questions about the data, however it is most likely that these counties simply did not have any places where air quality is regularly measured.
 
-Next we explored the Covid-19 data
+Next we explored the COVID-19 dataset building off of our work we had done on the dataset in a previous challenge. We found that the data included roughly 3000 counties, much more comprehensive than our EPA air quality data. While exploring the dataset we noticed that the patient's location is being counted where they are treated rather than where they live, which could have an effect on our final results. We noted this but concluded more often that patients are treated in their home county.
 
+Lastly, we looked into the PM2.5 dataset. This dataset included the PM2.5 reading for each county across years 2000-2016. This offered a long term time scale, which reflects the long term health effects of air pollution well. This dataset also included information on over 3000 counties, meaning that nearly every county in the US is accounted for in the data set. 
 
 *Conclusion*:
-We found a correlation between 10 year averaged AQI and Covid-19 cases and deaths by county. These findings are in agreement with the paper that found a relation to Covid-19 outcomes and air pollution. However, we also noted that air pollution is linked to many other factors that may be confounding our results. For example, communities with higher levels of air pollution tend to be poorer communities. Additionally, accross different counties there are varying levels of testing availability, hospital availability, social distancing, and public health information which can all impact the cases and deaths resulting from Covid-19.
+We set out to explore the findings outlined in a Harvard study that found a link between Covid-19 outcomes and a type of air pollution called PM2.5. They argued that higher exposure to air pollution could lead to more severe covid cases and higher death rates. We found a weak correlation between 10 year averaged AQI and Covid-19 cases and deaths by county. The respective correlation between AQI and cases and deaths are 0.125 and 0.099.  Additionally, we found a weak correlation between PM2.5 and Covid-19 cases and deaths. The respective correlation between PM2.5 and cases and deaths are 0.244 and 0.150.  These findings are in agreement with the paper that found a relation to COVID-19 outcomes and air pollution. However, the relationship we found was much weaker. We believe this difference is because air pollution is linked to many other factors that may be confounding our results. For example, communities with higher levels of air pollution tend to be low income communities. Additionally, across different counties there are varying levels of testing availability, hospital availability, social distancing, and public health information which can all impact the cases and deaths resulting from COVID-19.
 
+Air pollution linked to many other variables:
 https://www.niehs.nih.gov/research/programs/geh/geh_newsletter/2016/4/spotlight/poor_communities_exposed_to_elevated_air_pollution_levels.cfm
 
 *Questions and Future Exploration*:
+    Because we wanted to carefully scope our project, some questions that we have with regards to air quality are geared towards how different air pollutants may expand or affect COVID19 cases within the US. While we investigated the median air quality index through counties and confirmed cases/deaths within the United States, our results intrigued us to look into certain subtopics that we found within our research that may impact communities affected by air quality and, more specifically, air pollution. Using average household income data for every county may allow us to investigate and understand if air pollution and income have a correlation, and plotting this data against COVID19 deaths and cases may lead to insights on different income communities and their reports on COVID19 activity. Additionally, investigating the activity of wildfires may also lead to some insights on how COVID19 is spreading throughout the states since air pollutants worsen COVID19 symptoms and outcomes.
 
 
 
@@ -59,29 +62,11 @@ https://www.niehs.nih.gov/research/programs/geh/geh_newsletter/2016/4/spotlight/
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-<<<<<<< HEAD
-```{r wrangling data}
-#Get the avg aqi for years 2009-2019
-df_avg_aqi <- df_aqi_19_09 %>%
-  group_by(County, State) %>%
-  summarise_at(vars("Median.AQI"),
-                list(Avg_aqi = mean))
-
-names(df_covid)[2] <- "County"
-names(df_covid)[3] <- "State"
-df_covid_air_mean <- inner_join(df_covid, df_avg_aqi, by = c("County", "State"))
-df_covid_air_mean #This is the joined version of COVID-19 and 10 year mean EPA data
-
-
-df_covid_air <- inner_join(df_covid, df_airquality2020, by = c("County", "State"))
-df_covid_air #This is the joined version of the COVID-19 and EPA data set
-=======
 We load our libraries here: 
 
 ```{r library}
 library(tidyverse)
 library(tidyr)
->>>>>>> d420c6965f4ab14e28b4f2b55c45733fe1859bb6
 ```
 We load the our datasets here: 
 
@@ -222,46 +207,62 @@ df_covid_air_mean_pop <-
   mutate(deaths_per_100k = deaths * 100000 / population) %>%
   mutate(cases_per_100k = cases * 100000 / population)
 
-
 df_covid_air_mean_pop #This is the joined version of COVID-19 and 10 year mean EPA data
+
+df_correlation_aqi <- 
+  df_covid_air_mean_pop %>%
+  drop_na(cases_per_100k) %>% 
+  drop_na(deaths_per_100k) %>% 
+  drop_na(Avg_aqi) %>% 
+  summarise(correlation_deaths = cor(Avg_aqi, deaths_per_100k),
+            correlation_cases = cor(Avg_aqi, cases_per_100k))
+df_correlation_aqi
+
 ```
+
+```{r}
+df_aqi_deaths <- data.frame( x = 75,
+                  y = 30,
+                  cor = c( "r = 0.125") )
+
+df_aqi_cases <- data.frame( x = 75,
+                  y = 1500,
+                  cor = c( "r = 0.099") )
+df_aqi_deaths
+df_aqi_cases
+```
+
 ```{r plot EPA data}
 df_covid_air_mean_pop %>%
   ggplot() +
-  geom_point(aes(Avg_aqi, deaths_per_100k), size = 1) +
+  geom_point(aes(Avg_aqi, deaths_per_100k), size = .2) +
   geom_smooth(aes(Avg_aqi, deaths_per_100k), method = "lm") +
   theme_common() +
-  scale_y_log10()+
+  scale_y_log10() +
+  geom_label(
+    data = df_aqi_deaths,
+    aes(x, y, label = cor)
+  ) +
   labs(
       x = "2009-2019 Mean Air Quality Index (AQI)",
-      y = "Deaths"
+      y = "Deaths per 100k"
     ) +
   ggtitle("Correlation between deaths and 10 year mean aqi by county")
 
-<<<<<<< HEAD
-```
-
-
-```{r}
-df_covid_air_mean %>%
-  summarise(
-    Air_Quality_Index = Avg_aqi,
-    Cases = cases,
-    Deaths = deaths,
-    County = County,
-    State = State) %>%
-=======
 
 df_covid_air_mean_pop %>%
->>>>>>> d420c6965f4ab14e28b4f2b55c45733fe1859bb6
   ggplot() +
   geom_point(aes(Avg_aqi, cases_per_100k), size = .2) +
   geom_smooth(aes(Avg_aqi, cases_per_100k), method = "lm") +
   theme_common() +
-  scale_y_log10()+
+  scale_y_log10() +
+  geom_label(
+    data = df_aqi_cases,
+    aes(x, y, label = cor)
+  ) +
   labs(
       x = "2009-2019 Mean Air Quality Index (AQI)",
-      y = "Cases"
+      y = "Cases per 100k"
     ) +
   ggtitle("Correlation between cases and 10 year mean aqi by county")
 ```
@@ -295,33 +296,79 @@ df_pm <-
 # Join with NYT data
   full_join(df_data, by = "fips")
   
-
 df_pm
+
 
 df_pm_norm <-
   df_pm %>% 
   mutate(deaths_per_100k = deaths * 100000 / population) %>%
   mutate(cases_per_100k = cases * 100000 / population)
-
 df_pm_norm
 
+
+df_correlation_pm <- 
+  df_pm_norm %>%
+  drop_na(cases_per_100k) %>% 
+  drop_na(deaths_per_100k) %>% 
+  drop_na(mean_pm25) %>% 
+  summarise(correlation_deaths = cor(mean_pm25, deaths_per_100k),
+            correlation_cases = cor(mean_pm25, cases_per_100k))
+
+
+
+df_correlation_pm
+
 ```
+```{r}
+df_pm_deaths <- data.frame( x = 14,
+                  y = 200,
+                  cor = c( "r = 0.244") )
+
+df_pm_cases <- data.frame( x = 14,
+                  y = 8000,
+                  cor = c( "r = 0.150") )
+df_pm_deaths
+df_pm_cases
+```
+
 
 ```{r graph of PM25 with normalized death rate}
 df_pm_norm %>% 
   ggplot(aes(mean_pm25, deaths_per_100k)) + 
   geom_point(size = .1) + 
   scale_y_log10() + 
-  geom_smooth(method = glm)+
-  theme_common()
+  geom_smooth(method = glm) +
+  theme_common() + 
+  geom_label(
+    data = df_pm_deaths,
+    aes(x, y, label = cor)
+  ) +
+  labs(
+      x = "Mean PM2.5 concentration from 2000 - 2016 (μg/m³)",
+      y = "Deaths per 100k"
+    ) +
+  ggtitle("Correlation between deaths and 16 year mean PM2.5 concentration by county\nR = .244")
+  
 
 df_pm_norm %>% 
   ggplot(aes(mean_pm25, cases_per_100k)) + 
   geom_point(size = .1) + 
   scale_y_log10() + 
   geom_smooth(method = glm)+
-  theme_common()
+
+  theme_common() + 
+  labs(
+      x = "Mean PM2.5 concentration from 2000 - 2016 (μg/m³)",
+      y = "Cases per 100k"
+    ) +
+  geom_label(
+    data = df_pm_cases,
+    aes(x, y, label = cor)
+  ) +
+  ggtitle("Correlation between cases and year mean PM2.5 concentration by county")
 ```
+
+
 
 
 
